--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Daiki Itoh",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "argon2": "^0.26.1",
+    "express": "^4.17.1",
+    "sqlite3": "^4.1.1"
   }
 }
