--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "argon2": "^0.26.2",
+    "connect-redis": "^4.0.4",
     "express": "^4.17.1",
-    "sqlite3": "^4.1.1"
+    "express-session": "^1.17.1",
+    "redis": "^3.0.2",
+    "sqlite3": "^4.1.1",
+    "winston": "^3.2.1"
   },
   "devDependencies": {},
   "scripts": {
